# raid

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/templates/: email_template.py
